fontawesome and footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,8 +17,11 @@
   <div class="container">
     <div class="content has-text-centered">
       <p>
-        <strong>Heartbeat</strong> made with love by <a href="https://github.com/InitiativeVoidPtr">Void*</a>. The source code is licensed
-        <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
+        <strong>Heartbeat</strong> made with <i class="fa fa-heart"></i> by
+        <a href="https://github.com/InitiativeVoidPtr">Void*</a> #rethinkhackathon #opencodes.
+        <br>
+        The <a href="https://github.com/InitiativeVoidPtr/oc18_heartbeatfrontend">source code</a> is
+        <a href="http://opensource.org/licenses/mit-license.php">MIT</a> licensed.
       </p>
     </div>
   </div>
