--- a/src/app/ekg-overview/ekg-overview.component.html
+++ b/src/app/ekg-overview/ekg-overview.component.html
@@ -1,12 +1,12 @@
 <div class="tile is-ancestor">
   <div class="tile is-parent is-6">
     <div class="tile is-child box">
-      <p class="title">Three</p>
+      <app-ekg-chart></app-ekg-chart>
     </div>
   </div>
   <div class="tile is-parent is-6">
     <div class="tile is-child box">
-      <p class="title">One</p>
+      <app-ekg-table></app-ekg-table>
     </div>
     <div class="tile is-child box">
       <p class="title">Two</p>
