create ekg module and move components, table with sample data

--- a/src/app/ekg/ekg-overview/ekg-overview.component.html
+++ b/src/app/ekg/ekg-overview/ekg-overview.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="tile is-parent is-6">
     <div class="tile is-child box">
-      <app-ekg-table></app-ekg-table>
+      <app-ekg-table [data]="beatMap.get('42')"></app-ekg-table>
     </div>
     <div class="tile is-child box">
       <p class="title">Two</p>
