--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="hero-body">
     <div class="container">
       <h1 class="title">
-        The Sound of Your Heart
+        <i class="fa fa-asterisk"></i> The Sound of Your Heart
       </h1>
     </div>
   </div>
@@ -18,7 +18,7 @@
     <div class="content has-text-centered">
       <p>
         <strong>Heartbeat</strong> made with <i class="fa fa-heart"></i> by
-        <a href="https://github.com/InitiativeVoidPtr">Void*</a> #rethinkhackathon #opencodes.
+        <a href="https://github.com/InitiativeVoidPtr">Initiative Void<i class="fa fa-asterisk"></i></a> #rethinkhackathon #opencodes.
         <br>
         The <a href="https://github.com/InitiativeVoidPtr/oc18_heartbeatfrontend">source code</a> is
         <a href="http://opensource.org/licenses/mit-license.php">MIT</a> licensed.
