--- a/src/app/ekg/ekg-table/ekg-table.component.html
+++ b/src/app/ekg/ekg-table/ekg-table.component.html
@@ -7,7 +7,7 @@
   </tr>
   </thead>
   <tbody>
-  <tr *ngFor="let beat of data.reverse()">
+  <tr *ngFor="let beat of reversedData()">
     <td>{{beat.timestamp | date:'mediumTime'}}</td>
     <td>{{beat.bpm}}</td>
     <td>*</td>
