--- a/src/app/ekg/ekg-chart/ekg-chart.component.html
+++ b/src/app/ekg/ekg-chart/ekg-chart.component.html
@@ -1,3 +1,5 @@
-<p>
-  ekg-chart works!
-</p>
+<ngx-charts-line-chart [results]="results"
+                       [view]="[700, 400]" [autoScale]="true" [xAxis]="true" [yAxis]="true"
+                       xAxisLabel="Time" yAxisLabel="BPM"
+                       [showXAxisLabel]="true" [showYAxisLabel]="true">
+</ngx-charts-line-chart>
