--- a/src/app/ekg/ekg-overview/ekg-overview.component.html
+++ b/src/app/ekg/ekg-overview/ekg-overview.component.html
@@ -1,7 +1,7 @@
 <div class="tile is-ancestor">
   <div class="tile is-parent is-6">
     <div class="tile is-child box">
-      <app-ekg-chart></app-ekg-chart>
+      <app-ekg-chart [data]="beatMap" [devices]="devices"></app-ekg-chart>
     </div>
   </div>
   <div class="tile is-parent is-6">
