small improvements to the design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="hero-body">
     <div class="container">
       <h1 class="title">
-        <i class="fa fa-asterisk"></i> The Sound of Your Heart
+        <i class="fa fa-asterisk"></i> The Sound of Your <i class="fa fa-heartbeat"></i>
       </h1>
     </div>
   </div>
