display data from backend correctly

--- a/src/app/ekg/ekg-chart/ekg-chart.component.html
+++ b/src/app/ekg/ekg-chart/ekg-chart.component.html
@@ -1,5 +1,5 @@
 <ngx-charts-line-chart [results]="results"
-                       [autoScale]="true" [xAxis]="true" [yAxis]="true"
+                       [autoScale]="true" [xAxis]="false" [yAxis]="true"
                        xAxisLabel="Time" yAxisLabel="BPM"
-                       [showXAxisLabel]="true" [showYAxisLabel]="true">
+                       [showXAxisLabel]="false" [showYAxisLabel]="true">
 </ngx-charts-line-chart>
