--- a/src/app/ekg/ekg-overview/ekg-overview.component.html
+++ b/src/app/ekg/ekg-overview/ekg-overview.component.html
@@ -5,11 +5,11 @@
     </div>
   </div>
   <div class="tile is-parent is-5">
-    <div class="tile is-child box">
+    <div class="tile is-child box" *ngIf="deviceById('42') != null">
       <p class="title">{{deviceById('42').name}}</p>
       <app-ekg-table [data]="beatMap.get('42')"></app-ekg-table>
     </div>
-    <div class="tile is-child box">
+    <div class="tile is-child box" *ngIf="deviceById('43') != null">
       <p class="title">{{deviceById('43').name}}</p>
       <app-ekg-table [data]="beatMap.get('43')"></app-ekg-table>
     </div>
