minor improvements to UI

--- a/src/app/ekg/ekg-chart/ekg-chart.component.html
+++ b/src/app/ekg/ekg-chart/ekg-chart.component.html
@@ -1,4 +1,4 @@
-<ngx-charts-line-chart [results]="results"
+<ngx-charts-line-chart [results]="results" [legend]="true"
                        [autoScale]="true" [xAxis]="false" [yAxis]="true"
                        xAxisLabel="Time" yAxisLabel="BPM"
                        [showXAxisLabel]="false" [showYAxisLabel]="true">
