--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,9 @@
       <h1 class="title">
         <i class="fa fa-asterisk"></i> The Sound of Your <i class="fa fa-heartbeat"></i>
       </h1>
+      <h2 class="subtitle">
+        The Cheap Way
+      </h2>
     </div>
   </div>
 </section>
