--- a/src/app/ekg/ekg-table/ekg-table.component.html
+++ b/src/app/ekg/ekg-table/ekg-table.component.html
@@ -1,14 +1,14 @@
 <table class="table is-hoverable is-bordered">
   <thead>
   <tr>
-    <th>Time</th>
-    <th>BPM</th>
-    <th>Note</th>
+    <th><i class="fa fa-clock-o"></i></th>
+    <th><i class="fa fa-heart"></i></th>
+    <th><i class="fa fa-music"></i></th>
   </tr>
   </thead>
   <tbody>
   <tr *ngFor="let beat of reversedData()">
-    <td>{{beat.timestamp | date:'mediumTime'}}</td>
+    <td>{{beat.timestamp | date:'h:mm:ss'}}</td>
     <td>{{beat.bpm}}</td>
     <td>{{(beat.note) ? beat.note : '*'}}</td>
   </tr>
