--- a/src/app/ekg/ekg-table/ekg-table.component.html
+++ b/src/app/ekg/ekg-table/ekg-table.component.html
@@ -1,6 +1,6 @@
-<p class="subtitle">
-  <i class="fa fa-heart"></i>{{reversedData()[0].bpm}}
-  <i class="fa fa-music"></i>{{reversedData()[0].note.toString()}}
+<p class="subtitle" *ngIf="data[0]">
+  <i class="fa fa-heart"></i>{{data[0].bpm}}
+  <i class="fa fa-music"></i>{{data[0].note.toString()}}
 </p>
 <table class="table is-hoverable is-bordered">
   <thead>
@@ -11,7 +11,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let beat of reversedData()">
+    <tr *ngFor="let beat of data">
       <td>{{beat.timestamp | date:'h:mm:ss'}}</td>
       <td>{{beat.bpm}}</td>
       <td>{{(beat.note) ? beat.note : '*'}}</td>
